--- a/app/views/promises/show.html.erb
+++ b/app/views/promises/show.html.erb
@@ -15,5 +15,15 @@
   <%= @promise.description %>
 </p>
 
+<p>
+  <strong>Etd:</strong>
+  <%= @promise.etd %>
+</p>
+
+<p>
+  <strong>Project:</strong>
+  <%= @promise.project %>
+</p>
+
 <%= link_to 'Edit', edit_promise_path(@promise) %> |
 <%= link_to 'Back', promises_path %>
