--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,28 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :category %>
-    <%= form.text_field :category %>
-  </div>
-
-  <div class="field">
-    <%= form.label :deadline %>
-    <%= form.datetime_select :deadline %>
-  </div>
-
-  <div class="field">
-    <%= form.label :currentamount %>
-    <%= form.number_field :currentamount %>
-  </div>
-
-  <div class="field">
-    <%= form.label :goalamount %>
-    <%= form.number_field :goalamount %>
-  </div>
-
-  <div class="field">
     <%= form.label :tittle %>
     <%= form.text_field :tittle %>
+  </div>
+
+  <div class="field">
+    <%= form.label :markdown %>
+    <%= form.text_area :markdown %>
   </div>
 
   <div class="field">
@@ -42,8 +27,33 @@
   </div>
 
   <div class="field">
-    <%= form.label :video %>
-    <%= form.text_field :video %>
+    <%= form.label :goalamount %>
+    <%= form.number_field :goalamount %>
+  </div>
+
+  <div class="field">
+    <%= form.label :currentamount %>
+    <%= form.number_field :currentamount %>
+  </div>
+
+  <div class="field">
+    <%= form.label :approved %>
+    <%= form.check_box :approved %>
+  </div>
+
+  <div class="field">
+    <%= form.label :pendingapproval %>
+    <%= form.check_box :pendingapproval %>
+  </div>
+
+  <div class="field">
+    <%= form.label :deadline %>
+    <%= form.date_select :deadline %>
+  </div>
+
+  <div class="field">
+    <%= form.label :category_id %>
+    <%= form.text_field :category_id %>
   </div>
 
   <div class="actions">
