--- a/app/views/promises/index.html.erb
+++ b/app/views/promises/index.html.erb
@@ -8,6 +8,8 @@
       <th>Name</th>
       <th>Amount</th>
       <th>Description</th>
+      <th>Etd</th>
+      <th>Project</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +20,8 @@
         <td><%= promise.name %></td>
         <td><%= promise.amount %></td>
         <td><%= promise.description %></td>
+        <td><%= promise.etd %></td>
+        <td><%= promise.project %></td>
         <td><%= link_to 'Show', promise %></td>
         <td><%= link_to 'Edit', edit_promise_path(promise) %></td>
         <td><%= link_to 'Destroy', promise, method: :delete, data: { confirm: 'Are you sure?' } %></td>
