--- a/app/views/userpasswords/_form.html.erb
+++ b/app/views/userpasswords/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :password %>
   </div>
 
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.text_field :user_id %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
