--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,13 +17,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :username %>
-    <%= form.text_field :username %>
+    <%= form.label :address %>
+    <%= form.text_field :address %>
   </div>
 
   <div class="field">
-    <%= form.label :mail %>
-    <%= form.text_field :mail %>
+    <%= form.label :email %>
+    <%= form.text_field :email %>
   </div>
 
   <div class="field">
@@ -37,8 +37,13 @@
   </div>
 
   <div class="field">
-    <%= form.label :lastlogin %>
-    <%= form.datetime_select :lastlogin %>
+    <%= form.label :laslogin %>
+    <%= form.datetime_select :laslogin %>
+  </div>
+
+  <div class="field">
+    <%= form.label :isadmin %>
+    <%= form.check_box :isadmin %>
   </div>
 
   <div class="actions">
