--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,11 +6,12 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Username</th>
-      <th>Mail</th>
+      <th>Address</th>
+      <th>Email</th>
       <th>Birthday</th>
       <th>Description</th>
-      <th>Lastlogin</th>
+      <th>Laslogin</th>
+      <th>Isadmin</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,11 +20,12 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= user.username %></td>
-        <td><%= user.mail %></td>
+        <td><%= user.address %></td>
+        <td><%= user.email %></td>
         <td><%= user.birthday %></td>
         <td><%= user.description %></td>
-        <td><%= user.lastlogin %></td>
+        <td><%= user.laslogin %></td>
+        <td><%= user.isadmin %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
