Work done. Salutations

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Welcome!</h1>
 <p>This page is possible thanks to the hard work of Esperanza Uribe & Lucas Latuz</p>
+<li><a href="/users">Users</a></li>
+<li><a href="/projects">Projects</a></li>
+<li><a href="/promises">Promises</a></li>
+<li><a href="/categories">Categories</a></li>
+<li><a href="/userpasswords">Passwords</a></li>
