--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,6 +29,7 @@
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Wishlist',"users/%s/wishlist"%[user.id] %></td>
       </tr>
     <% end %>
   </tbody>
@@ -37,4 +38,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
-<li><a href="/">Home</a></li>
+<a href="/">Home</a>
