migrations ready with the missing models from correction 1.2

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,39 @@
+<head>
+
+</head>
+
+<body>
+<header>
+  <table>
+    <colgroup>
+
+    </colgroup>
+  </table>
+</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h1>Welcome!</h1>
 <p>This page is possible thanks to the hard work of Esperanza Uribe & Lucas Latuz</p>
 <li><a href="/users">Users</a></li>
@@ -5,3 +41,5 @@
 <li><a href="/promises">Promises</a></li>
 <li><a href="/categories">Categories</a></li>
 <li><a href="/userpasswords">Passwords</a></li>
+
+</body>
