added gato.jpeg file

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,10 +4,13 @@
 
 <body>
 <header>
-  <table>
-    <colgroup>
-
-    </colgroup>
+  <table border="2px" style="color: red">
+    <tbody>
+    <tr>
+      <td></td>
+      <td>ndn</td>
+    </tr>
+    </tbody>
   </table>
 </header>
 
