FINALLY GOT BOOTSTRAP WORKING

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,8 @@
+<head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+</head>
+<body>
+
 <h1>Welcome!</h1>
 <p>This page is possible thanks to the hard work of Esperanza Uribe & Lucas Latuz</p>
 <li><a href="/users">Users</a></li>
@@ -5,3 +10,5 @@
 <li><a href="/promises">Promises</a></li>
 <li><a href="/categories">Categories</a></li>
 <li><a href="/userpasswords">Passwords</a></li>
+<button type="button" class="btn btn-primary">Primary</button>
+</body>
