--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,5 +10,5 @@
 <li><a href="/promises">Promises</a></li>
 <li><a href="/categories">Categories</a></li>
 <li><a href="/userpasswords">Passwords</a></li>
-<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-primary">Primar</button>
 </body>
