--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,54 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style>
 
-<h1>Welcome!</h1>
-<p>This page is possible thanks to the hard work of Esperanza Uribe & Lucas Latuz</p>
-<li><a href="/users">Users</a></li>
-<li><a href="/projects">Projects</a></li>
-<li><a href="/promises">Promises</a></li>
-<li><a href="/categories">Categories</a></li>
-<li><a href="/userpasswords">Passwords</a></li>
-<button type="button" class="btn btn-primary">Primar</button>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Catfinding</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <input type="text" placeholder="Enter Username" name="uname" required>
+      <input type="password" placeholder="Enter Password" name="upassword" required>
+      <button type="button" class="btn btn-warning">Log In</button>
+    </ul>
+  </div>
+</nav>
+
+
+<div class="container">
+  <h1>Sign up</h1><br>
+  Email <input type="text" name="email"><br><br>
+  First Name <input type="text" name="fname"><br><br>
+  Last Name <input type="text" name="lname"><br><br>
+  Adress <input type="text" name="adress"><br><br>
+  Birthday <input type="date" name="birthday"><br><br>
+  Phone <input type="text" name="phone"><br><br>
+  Gender
+  <form>
+    <label class="radio-inline">
+      <input type="radio" name="gender">Male
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="gender">Female
+    </label>
+    <label class="radio-inline">
+      <input type="radio" name="gender">Undefined
+    </label>
+  </form><br>
+  Password <input type="password" name="rpassword"><br><br>
+  Repeat Password <input type="password" name="rpassword"><br><br>
+  <button type="button" class="btn btn-primary">Create Account</button>
+
+</div>
+
 </body>
+</html>
