--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style>
+<body>
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -46,7 +46,7 @@
   </form><br>
   Password <input type="password" name="rpassword"><br><br>
   Repeat Password <input type="password" name="rpassword"><br><br>
-  <button type="button" class="btn btn-primary">Create Account</button>
+  <button type="button" class="btn btn-primary">Create Account</button><div align="center"><button type="button" class="btn btn-primary">Don't want to login? <br>Enter as a guest</button></div>
 
 </div>
 
