--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,6 +19,8 @@
       <input type="text" placeholder="Enter Username" name="uname" required>
       <input type="password" placeholder="Enter Password" name="upassword" required>
       <button type="button" class="btn btn-warning">Log In</button>
+      <br>
+      <a href=" ">Forgot your password?</a>
     </ul>
   </div>
 </nav>
