--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,17 +8,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background-color:AntiqueWhite;" >
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Catfinding</a>
+      <img src="/app/assets/images/gato.jpeg" alt="Mountain View">
     </div>
     <ul class="nav navbar-nav navbar-right">
       <input type="text" placeholder="Enter Username" name="uname" required>
       <input type="password" placeholder="Enter Password" name="upassword" required>
-      <button type="button" class="btn btn-warning">Log In</button>
+      <button type="button" class="btn btn-primary">Log In</button>
       <br>
       <a href=" ">Forgot your password?</a>
     </ul>
