wip navbar style

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -88,3 +88,9 @@ label {
   border-color: #4d3518 !important;
   border-width: medium !important;
 }
+
+.navbar-inverse {
+  background: #e4a86c !important;
+  border-color: #e4a86c !important;
+  
+}
