--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -38,6 +38,9 @@ th {
 
 td {
   padding: 0 5px 7px;
+  border-color: transparent !important;
+  border-width: thick !important;
+  margin: 5px !important;
 }
 
 div {
@@ -92,5 +95,17 @@ label {
 .navbar-inverse {
   background: #e4a86c !important;
   border-color: #e4a86c !important;
-  
+
+}
+
+tr {
+  border-color: pink !important;
+  border-width: thick !important;
+
+}
+
+td {
+  border-color: transparent !important;
+  border-width: thick !important;
+  margin: 5px !important;
 }
