--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,38 +1,95 @@
 <p id="notice"><%= notice %></p>
 
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body style="background-color:AntiqueWhite;" >
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          by category...
+          <li><a href="#">Film</a></li>
+          <li><a href="#">Design & Tech</a></li>
+          <li><a href="#">Publishing</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Arts</a></li>
+          <li><a href="#">Music</a></li>
+          <li><a href="#">Comic & Illustration</a></li>
+          <li><a href="#">Food & Craft</a></li>
+        </ul>
+      </li>
+      <li><a href="#">My info</a></li>
+      <li><a href="#">Search</a></li>
+    </ul>
+  </div>
+</nav>
+
+<table class="table" align="center">
+<tr>
+<td align="center">
+<input type="text" placeholder="Search by tittle or description..." name="uname" size="100"></td>
+<td align="center">
+<div class="form-group">
+<select class="form-control" id="sel1">
+  <option>Category...</option>
+  <option>Film</option>
+  <option>Design & Tech</option>
+  <option>Publishing</option>
+  <option>Games</option>
+  <option>Arts</option>
+  <option>Music</option>
+  <option>Comic & Illustration</option>
+  <option>Food & Craft</option>
+</select>
+</div>
+</td>
+  <td align="center">
+    <button type="button" class="btn btn-primary" >Apply</button>
+  </td>
+</tr>
+
+</table>
+</body>
+</html>
+
 <h1>Projects</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Tittle</th>
-      <th>Markdown</th>
       <th>Description</th>
-      <th>Goalamount</th>
-      <th>Currentamount</th>
-      <th>Approved</th>
-      <th>Pendingapproval</th>
+      <th>Goal amount</th>
+      <th>Current amount</th>
       <th>Deadline</th>
       <th>Category</th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
-
   <tbody>
     <% @projects.each do |project| %>
       <tr>
         <td><%= project.tittle %></td>
-        <td><%= project.markdown %></td>
         <td><%= project.description %></td>
         <td><%= project.goalamount %></td>
         <td><%= project.currentamount %></td>
-        <td><%= project.approved %></td>
-        <td><%= project.pendingapproval %></td>
         <td><%= project.deadline %></td>
         <td><%= project.category %></td>
         <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
