--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,11 +17,16 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
-          <li><a href="#">Page 1-3</a></li>
+          <li><a href="#">Film</a></li>
+          <li><a href="#">Design & Tech</a></li>
+          <li><a href="#">Publishing</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Arts</a></li>
+          <li><a href="#">Music</a></li>
+          <li><a href="#">Comic & Illustration</a></li>
+          <li><a href="#">Food & Craft</a></li>
         </ul>
       </li>
       <li><a href="#">Page 2</a></li>
