--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,7 +53,8 @@
       </td>
       <td/>
       <td>
-    <div align="center" style="text-indent: 10em"><a href="/projects" type="button"  class="btn btn-primary">Don't want to login? <br>Enter as a guest</a>
+    <div align="center">
+      <button href="/projects" type="button" class="btn btn-primary btn-lg" style="height: 100px; text-align: center;">Don't want to login? Enter as a guest</button>
     </div>
       </td>
     </tr>
