--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,7 +53,10 @@
       </td>
       <td/>
       <td>
-    <div align="center" style="text-indent: 10em"><a href="/projects" type="button"  class="btn btn-primary">Don't want to login? <br>Enter as a guest</a>
+    <div align="center" style="text-indent: 10em">
+      <form action="/projects">
+        <input class="btn btn-primary" type="submit" value="Don't want to login? Enter as a guest">
+      </form>
     </div>
       </td>
     </tr>
