--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,14 +14,13 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <img src="/assets/gato.png" height="110px" href = "#" >
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          by category...
           <li><a href="#">Film</a></li>
           <li><a href="#">Design & Tech</a></li>
           <li><a href="#">Publishing</a></li>
