--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color:AntiqueWhite;" >
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse " style="font-size: medium">
     <img src="/assets/logo.png" height="110px" href = "#" >
     <ul class="nav navbar-nav navbar-right">
       <input style="margin-top: 8%" align="center" type="text" placeholder="Enter Username" name="uname" required>
@@ -53,15 +53,11 @@
       </td>
       <td/>
       <td>
-<<<<<<< HEAD
     <div align="center" style="text-indent: 10em">
       <form action="/projects">
         <input class="btn btn-primary" type="submit" value="Don't want to login? Enter as a guest">
       </form>
-=======
-    <div align="center">
-      <button href="/projects" type="button" class="btn btn-primary btn-lg" style="height: 100px; text-align: center;">Don't want to login? Enter as a guest</button>
->>>>>>> 6bac6cc4af28a813a08474ab47f7d30ddb9008d6
+
     </div>
       </td>
     </tr>
