--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -95,15 +95,18 @@ label {
 .navbar-inverse {
   background: #e4a86c !important;
   border-color: #e4a86c !important;
-  
-
 }
 
-tr {
-  border-color: pink !important;
-  border-width: thick !important;
-
+.navbar-home {
+  font-size: large !important;
+  align-content: center !important;
+  alignment: center !important;
+  align-self: center !important;
+  color: white !important;
+  margin-top: 5px !important;
+  text-decoration-color: white !important;
 }
+
 
 td {
   border-color: transparent !important;
