Projects show etc

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -16,22 +16,22 @@
       <img src="/assets/gato.png" height="60px" href = "/" >
     </div>
     <ul class="nav navbar-nav navbar-home navbar-light" >
-      <li class="active"><a href="#">Home</a></li>
+      <li class="active"><a href="/projects">Home</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Film</a></li>
-          <li><a href="#">Design & Tech</a></li>
-          <li><a href="#">Publishing</a></li>
-          <li><a href="#">Games</a></li>
-          <li><a href="#">Arts</a></li>
-          <li><a href="#">Music</a></li>
-          <li><a href="#">Comic & Illustration</a></li>
-          <li><a href="#">Food & Craft</a></li>
+          <li><a href="/projects">Film</a></li>
+          <li><a href="/projects">Design & Tech</a></li>
+          <li><a href="/projects">Publishing</a></li>
+          <li><a href="/projects">Games</a></li>
+          <li><a href="/projects">Arts</a></li>
+          <li><a href="/projects">Music</a></li>
+          <li><a href="/projects">Comic & Illustration</a></li>
+          <li><a href="/projects">Food & Craft</a></li>
         </ul>
       </li>
       <li><a href="#">My info</a></li>
-      <li><a href="#">Search</a></li>
+      <li><a href="/projects">Search</a></li>
     </ul>
   </div>
 </nav>
@@ -71,7 +71,9 @@ un td con width 10% y le restas 10% al width del primer td-->
       <h1>Projects</h1>
     </td>
     <td width="10%">
-      <button type="button" class="btn btn-primary" style="align-self: left">New Project</button>
+      <form action="/projects/new">
+        <input class="btn btn-primary" type="submit" value="New Project">
+      </form>
     </td>
   </tr>
 </table>
