--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -9,29 +9,28 @@
 </head>
 <body style="background-color:AntiqueWhite;" >
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+<nav class="navbar navbar-inverse" style="height: 60px">
+  <div class="container-fluid" >
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <img src="/assets/gato.png" height="60px" href = "/" >
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+    <ul class="nav navbar-nav navbar-home navbar-light" >
+      <li class="active"><a href="/projects">Home</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          by category...
-          <li><a href="#">Film</a></li>
-          <li><a href="#">Design & Tech</a></li>
-          <li><a href="#">Publishing</a></li>
-          <li><a href="#">Games</a></li>
-          <li><a href="#">Arts</a></li>
-          <li><a href="#">Music</a></li>
-          <li><a href="#">Comic & Illustration</a></li>
-          <li><a href="#">Food & Craft</a></li>
+          <li><a href="/projects">Film</a></li>
+          <li><a href="/projects">Design & Tech</a></li>
+          <li><a href="/projects">Publishing</a></li>
+          <li><a href="/projects">Games</a></li>
+          <li><a href="/projects">Arts</a></li>
+          <li><a href="/projects">Music</a></li>
+          <li><a href="/projects">Comic & Illustration</a></li>
+          <li><a href="/projects">Food & Craft</a></li>
         </ul>
       </li>
       <li><a href="#">My info</a></li>
-      <li><a href="#">Search</a></li>
+      <li><a href="/projects">Search</a></li>
     </ul>
   </div>
 </nav>
@@ -47,4 +46,7 @@
 </table>
 <form action="/projects">
   <input class="btn btn-primary" type="submit" value="Create Project">
+</form>
+<form action="/projects">
+  <input class="btn btn-primary" type="submit" value="Back">
 </form>
