Projects Category Name

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -99,7 +99,7 @@ un td con width 10% y le restas 10% al width del primer td-->
         <td><%= project.goalamount %></td>
         <td><%= project.currentamount %></td>
         <td><%= project.deadline %></td>
-        <td><%= project.category %></td>
+        <td><%= project.category.name %></td>
         <td><%= link_to 'Show', project %></td>
       </tr>
     <% end %>
