changed button spacing, deleted the search navbar item, and some minor fixes

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-inverse" style="height: 60px">
   <div class="container-fluid" >
     <div class="navbar-header">
-      <img src="/assets/gato.png" height="60px" href = "/" >
+      <img src="/assets/gato.png" height="59px" href = "/" >
     </div>
     <ul class="nav navbar-nav navbar-home navbar-light" >
       <li class="active"><a href="/projects">Home</a></li>
@@ -31,7 +31,6 @@
         </ul>
       </li>
       <li><a href="#">My info</a></li>
-      <li><a href="/projects">Search</a></li>
     </ul>
   </div>
 </nav>
@@ -79,7 +78,7 @@ un td con width 10% y le restas 10% al width del primer td-->
 </table>
 
 <!-- esta es la tabla con proyectos -->
-<table class="table table-striped">
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Tittle</th>
