Delete Button Projects

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -57,6 +57,11 @@
     </td>
     <td>
       <form action="/projects">
+        <input class="btn btn-primary" type="submit" value="Delete">
+      </form>
+    </td>
+    <td>
+      <form action="/projects">
         <input class="btn btn-primary" type="submit" value="Back">
       </form>
     </td>
