--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,9 +12,9 @@
 <nav class="navbar navbar-inverse " style="font-size: medium">
     <img src="/assets/logo.png" height="110px" href = "#" >
     <ul class="nav navbar-nav navbar-right">
-      <input style="margin-top: 8%" align="center" type="text" placeholder="Enter Username" name="uname" required>
-      <input style="margin-top: 8%" align="center" type="password" placeholder="Enter Password" name="upassword" required>
-      <button type="button" class="btn btn-primary" style="margin-right: 20px; margin-top: 10px">Log In</button>
+      <form action="/users/sign_in">
+        <input class="btn btn-primary" type="submit" value="Log in">
+      </form>
       <br>
       <a href=" " style="text-indent: 210em">Forgot your password?</a>
     </ul>
