commit to keep my changes

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -90,6 +90,7 @@ label {
   color : black !important;
   border-color: #4d3518 !important;
   border-width: medium !important;
+  alignment: inherit !important;
 }
 
 .navbar-inverse {
