--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -10,12 +10,12 @@
 <body style="background-color:AntiqueWhite;" >
 
 <nav class="navbar navbar-inverse" style="height: 60px">
-  <div class="container-fluid" >
+  <table class="container-fluid" >
     <div class="navbar-header">
       <img src="/assets/gato.png" height="59px" href = "/" >
     </div>
-    <ul class="nav navbar-nav navbar-home navbar-light" >
-      <li class="active"><a href="/projects">Home</a></li>
+    <ul class="nav navbar-nav navbar-home" >
+      <li class=""><a href="/projects">Home</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
         <ul class="dropdown-menu">
@@ -31,7 +31,8 @@
       </li>
       <li><a href="#">My info</a></li>
     </ul>
-  </div>
+    <button class="btn btn-link " x-placement="10000px">Log out?</button>
+  </table>
 </nav>
 
 <h1>New Project</h1>
