--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -31,7 +31,7 @@
       </li>
       <li><a href="#">My info</a></li>
     </ul>
-    <button class="btn btn-link " x-placement="10000px">Log out?</button>
+    <button class="btn btn-link ">Log out?</button>
   </table>
 </nav>
 
