--- a/app/views/users/wishlist.html.erb
+++ b/app/views/users/wishlist.html.erb
@@ -1,3 +1,39 @@
+<html lang="en">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body style="background-color:AntiqueWhite;" >
+
+<nav class="navbar navbar-inverse" style="height: 60px">
+  <table class="container-fluid" >
+    <div class="navbar-header">
+      <img src="/assets/gato.png" height="59px" href = "/" >
+    </div>
+    <ul class="nav navbar-nav navbar-home" >
+      <li class=""><a href="/projects">Home</a></li>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="/projects">Film</a></li>
+          <li><a href="/projects">Design & Tech</a></li>
+          <li><a href="/projects">Publishing</a></li>
+          <li><a href="/projects">Games</a></li>
+          <li><a href="/projects">Arts</a></li>
+          <li><a href="/projects">Music</a></li>
+          <li><a href="/projects">Comic & Illustration</a></li>
+          <li><a href="/projects">Food & Craft</a></li>
+        </ul>
+      </li>
+      <li><a href="#">My info</a></li>
+    </ul>
+    <button class="btn btn-link ">Log out?</button>
+  </table>
+</nav>
 <h1>Wishlist</h1>
 
 <tbody>
@@ -7,3 +43,5 @@
 </tbody>
 
 <%= link_to 'Back', users_path %>
+</body>
+</html>
