--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,27 @@
-<p>Hello <%= @resource.email %>!</p>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body style="background-color:AntiqueWhite;" >
+
+<nav class="navbar navbar-inverse " style="font-size: medium">
+  <a href = "/" >
+    <img src="/assets/logo.png" height="110px">
+  </a>  <ul class="nav navbar-nav navbar-right">
+    <form action="/users/sign_in">
+      <input class="btn btn-primary" type="submit" value="Log in">
+    </form>
+    <br>
+    <a href=" " style="text-indent: 210em">Forgot your password?</a>
+  </ul>
+
+</nav>
+<center>
+  <p>Hello <%= @resource.email %>!</p>
 
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
@@ -6,3 +29,6 @@
 
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
+</center>
+</body>
+</html>
