--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,33 @@
-<p>Hello <%= @resource.email %>!</p>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body style="background-color:AntiqueWhite;" >
+
+<nav class="navbar navbar-inverse " style="font-size: medium">
+  <a href = "/" >
+    <img src="/assets/logo.png" height="110px">
+  </a>  <ul class="nav navbar-nav navbar-right">
+    <form action="/users/sign_in">
+      <input class="btn btn-primary" type="submit" value="Log in">
+    </form>
+    <br>
+    <a href=" " style="text-indent: 210em">Forgot your password?</a>
+  </ul>
+
+</nav>
+<center>
+  <p>Hello <%= @resource.email %>!</p>
 
 <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
 
 <p>Click the link below to unlock your account:</p>
 
 <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+</center>
+</body>
+</html>
