--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,28 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body style="background-color:AntiqueWhite;" >
+
+<nav class="navbar navbar-inverse " style="font-size: medium">
+  <a href = "/" >
+    <img src="/assets/logo.png" height="110px">
+  </a>
+  <ul class="nav navbar-nav navbar-right">
+    <form action="/users/sign_in">
+      <input class="btn btn-primary" type="submit" value="Log in">
+    </form>
+    <br>
+    <a href=" " style="text-indent: 210em">Forgot your password?</a>
+  </ul>
+
+</nav>
+<center>
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -41,3 +65,6 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</center>
+</body>
+</html>
