--- a/app/views/promises/index.html.erb
+++ b/app/views/promises/index.html.erb
@@ -1,4 +1,26 @@
-<p id="notice"><%= notice %></p>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body style="background-color:AntiqueWhite;" >
+
+<nav class="navbar navbar-inverse " style="font-size: medium">
+  <img src="/assets/logo.png" height="110px" href = "/welcome/index.html.erb" >
+  <ul class="nav navbar-nav navbar-right">
+    <form action="/users/sign_in">
+      <input class="btn btn-primary" type="submit" value="Log in">
+    </form>
+    <br>
+    <a href=" " style="text-indent: 210em">Forgot your password?</a>
+  </ul>
+
+</nav>
+<center>
+  <p id="notice"><%= notice %></p>
 
 <h1>Promises</h1>
 
@@ -34,3 +56,6 @@
 
 <%= link_to 'New Promise', new_promise_path %>
 <li><a href="/">Home</a></li>
+</center>
+</body>
+</html>
