--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,36 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     
   </head>
 
   <body>
+  <nav class="navbar navbar-inverse" style="height: 60px">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <img src="/assets/gato.png" height="59px" href="/">
+      </div>
+      <ul class="nav navbar-nav navbar-home navbar-light">
+        <li class=""><a href="/projects">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/projects">Film</a></li>
+            <li><a href="/projects">Design & Tech</a></li>
+            <li><a href="/projects">Publishing</a></li>
+            <li><a href="/projects">Games</a></li>
+            <li><a href="/projects">Arts</a></li>
+            <li><a href="/projects">Music</a></li>
+            <li><a href="/projects">Comic & Illustration</a></li>
+            <li><a href="/projects">Food & Craft</a></li>
+          </ul>
+        </li>
+        <li><a href="#">My info</a></li>
+      </ul>
+    </div>
+  </nav>
     <%= yield %>
   </body>
 </html>
