--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,19 +8,7 @@
 </head>
 <body style="background-color:AntiqueWhite;" >
 
-<nav class="navbar navbar-inverse " style="font-size: medium">
-  <a href = "/" >
-    <img src="/assets/logo.png" height="110px">
-  </a>
-  <ul class="nav navbar-nav navbar-right">
-    <form action="/users/sign_in">
-      <input class="btn btn-primary" type="submit" value="Log in">
-    </form>
-    <br>
-    <a href=" " style="text-indent: 210em">Forgot your password?</a>
-  </ul>
 
-</nav>
 <center>
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -56,13 +44,13 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class:"btn-primary"  %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn-primary" %></p>
 
 <%= link_to "Back", :back %>
 </center>
