--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,6 +20,8 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
+<!--
+aqui hay errores no se pq
         <td><%= user.address %></td>
         <td><%= user.email %></td>
         <td><%= user.birthday %></td>
@@ -30,6 +32,7 @@
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <td><%= link_to 'Wishlist',"/users/wishlist/%s"%[user.id] %></td>
+-->
       </tr>
     <% end %>
   </tbody>
