--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,14 +13,16 @@
 
 <table class="table">
   <tr><td>Name</td> <td><%= @user.name %></td></tr>
- <!--
+  <!--
+ aqui iwal
   <tr><td>Address</td> <td><%= @user.address %></td></tr>
   <tr><td>Email</td> <td><%= @user.email %></td></tr>
   <tr><td>Birthday</td> <td><%= @user.birthday %></td></tr>
   <tr><td>Description</td> <td><%= @user.description %></td></tr>
   <tr><td>Last login</td> <td><%= @user.laslogin %></td></tr>
   <tr><td>Pending approval</td> <td><%= @user.pendingapproval %></td></tr>
-  <tr><td>Is admin?</td> <td><%= @user.isadmin %></td></tr> -->
+  <tr><td>Is admin?</td> <td><%= @user.isadmin %></td></tr>
+-->
 
 </table>
 </body>
