--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
           <div style="font-size: 14px">Hi!</div>
           <div class="div-child" style="font-size: 14px">
           <% if user_signed_in? %>
-
+            <div><%=current_user.name%> \(^-^)/</div>
             <%= link_to "Log out", destroy_user_session_path, method: :delete %>
           <% else %>
             <div>Beautiful Guest User</div>
