--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,4 +5,4 @@
   <%= @category.name %>
 </p>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back', categories_path, {:class => "btn btn-primary"} %>
