--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -16,7 +16,7 @@
 
 <p>Click the link below to unlock your account:</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token), {:class => "btn btn-primary"} %></p>
 </center>
 </body>
 </html>
