--- a/app/views/promises/index.html.erb
+++ b/app/views/promises/index.html.erb
@@ -44,8 +44,8 @@
 
 <br>
 
-<%= link_to 'New Promise', new_promise_path %>
-<li><a href="/">Home</a></li>
+<%= link_to 'New Promise', new_promise_path, {:class => "btn btn-primary"} %>
+<li><a href="/" class = 'btn-primary'>Home</a></li>
 </center>
 </body>
 </html>
