--- a/app/views/promises/new.html.erb
+++ b/app/views/promises/new.html.erb
@@ -14,7 +14,7 @@
 
 <%= render 'form', promise: @promise %>
 
-<%= link_to 'Back', promises_path %>
+<%= link_to 'Back', promises_path, {:class => "btn btn-primary"} %>
 </center>
 </body>
 </html>
