--- a/app/views/promises/show.html.erb
+++ b/app/views/promises/show.html.erb
@@ -37,8 +37,8 @@
   <%= @promise.project %>
 </p>
 
-<%= link_to 'Edit', edit_promise_path(@promise) %> |
-<%= link_to 'Back', promises_path %>
+<%= link_to 'Edit', edit_promise_path(@promise), {:class => "btn btn-primary"} %> |
+<%= link_to 'Back', promises_path, {:class => "btn btn-primary"} %>
 </center>
 </body>
 </html>
