--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,5 +40,5 @@ aqui hay errores no se pq
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, {:class => "btn btn-primary"} %>
 <a href="/">Home</a>
