--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend confirmation instructions", class:"btn-primary"  %>
+    <%= f.submit "Resend confirmation instructions", class:"btn btn-primary"  %>
   </div>
 <% end %>
 
