--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -30,7 +30,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password", class:"btn-primary"  %>
+    <%= f.submit "Change my password", class:"btn btn-primary"  %>
   </div>
 <% end %>
 
