--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,15 +44,15 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Update", class:"btn-primary"  %>
+    <%= f.submit "Update", class:"btn btn-primary"  %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn-primary" %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-primary" %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, {:class => "btn btn-primary"} %>
 </center>
 </body>
 </html>
