--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", class:"btn-primary"  %>
+    <%= f.submit "Sign up", class:"btn btn-primary"  %>
   </div>
 <% end %>
 
