--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -14,8 +14,8 @@
 
 <%= render 'form', project: @project %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Show', @project, {:class => "btn btn-primary"} %> |
+<%= link_to 'Back', projects_path, {:class => "btn btn-primary"} %>
 </center>
 </body>
 </html>
