--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Show', @user, {:class => "btn btn-primary"} %> |
+<%= link_to 'Back', users_path, {:class => "btn btn-primary"} %>
 </body>
 </html>
