--- a/app/views/users/wishlist.html.erb
+++ b/app/views/users/wishlist.html.erb
@@ -18,6 +18,6 @@
 <% end %>
 </tbody>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path, {:class => "btn btn-primary"} %>
 </body>
 </html>
