--- a/app/views/wishlists/edit.html.erb
+++ b/app/views/wishlists/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', wishlist: @wishlist %>
 
-<%= link_to 'Show', @wishlist %> |
-<%= link_to 'Back', wishlists_path %>
+<%= link_to 'Show', @wishlist, {:class => "btn btn-primary"} %> |
+<%= link_to 'Back', wishlists_path, {:class => "btn btn-primary"} %>
