--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,12 +20,10 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
-        <td><%= user.address %></td>
+        <td><%= user.adress %></td>
         <td><%= user.email %></td>
         <td><%= user.birthday %></td>
         <td><%= user.description %></td>
-        <td><%= user.laslogin %></td>
-        <td><%= user.isadmin %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
